--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -33,17 +33,17 @@
         <span class="circlebg" id="stepnumber">&nbsp;1&nbsp;</span> 
         <span id="text" class="steptext incanvas" >Draw the origin of lines</span></p>
         <canvas id="can" class="canvases" width="700" height="500"></canvas>
-        <button type="button" onclick="a();" class="label" id="a">a'</button>
-        <button type="button" onclick="bb();" class="label" id="b">b</button>
-        <button type="button" onclick="b();" class="label" id="aa">a</button>
-        <button type="button" onclick="bbb()" class="label" id="bb">b'</button>
-        <button type="button" onclick="b11();" class="label" id="b11">b1'</button>
-        <button type="button" onclick="b2();" class="label" id="b2">b2</button>
-        <button type="button" onclick="b1();" class="label" id="b1">b1</button>
-        <button type="button" onclick="b22();" class="label" id="b22">b2'</button>
-        <button type="button" onclick="ha();" class="label" id="h">h</button>
+        <button type="button" class="label" id="a">a'</button>
+        <button type="button" class="label" id="b">b</button>
+        <button type="button" class="label" id="aa">a</button>
+        <button type="button" class="label" id="bb">b'</button>
+        <button type="button"  class="label" id="b11">b1'</button>
+        <button type="button"class="label" id="b2">b2</button>
+        <button type="button"  class="label" id="b1">b1</button>
+        <button type="button"  class="label" id="b22">b2'</button>
+        <button type="button" class="label" id="h">h</button>
         <button type="button" onclick="v();" class="label" id="v">v</button>
-        <button type="button" onclick="hhhh();" class="label" id="hhhh">Traces</button>
+        <button type="button" class="label" id="hhhh">Traces</button>
     </div>
     
     
